# cnn-on-azure

./: .amlignore  .gitignore  create_env.sh  pyproject.toml
code/deployment/: predict.py
code/jobs/: train_job.yml
code/models/: train.py
environments/: conda.yml  dev_requirements.txt  from_conda.yml  from_docker.yml
environments/docker/: Dockerfile
notebooks/: simple CNN.ipynb
