[tool.poetry]
name = "cnn-on-azure"
version = "0.1.0"
description = ""
authors = ["Maciej Michałek <maciej.michalek@lingaro.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
azureml-core = "^1.39.0"
azureml-mlflow = "^1.39.0"
tensorflow = {extras = ["cpu"], version = "^2.8.0"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
Sphinx = "^4.4.0"
pytest = "^7.0.1"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
